# CPP

./: .gitignore  test_openblas.c  wipe_math.py
projects/: Dotproduct.java  checksum_O3_raw.csv  native.csv  plot_dotproduct_comparison.py  report.md  results_c(O0)_run1.csv  results_c(O0)_run3.csv  results_c(O0)_run4.csv  results_c(O1)_run3.csv  results_c(O1)_run4.csv  results_c(O2)_median.csv  results_c(O2)_run1.csv  results_c(O2)_run5.csv  results_c(O3).csv  results_c(O3)_run4.csv  results_java_mean.csv  results_java_run4.csv  results_java_vector_run2.csv  results_java_vector_run3.csv
projects/2026Spring/project3/: CMakeLists.txt  Makefile  Makefile_2  callgrind.out.118886  callgrind.out.120156  callgrind.out.121401  callgrind.out.122824  callgrind.out.129520  callgrind.out.138020  interface.c  main.c  sgemm.c  sgemm.h  sgemm_bench  time.c
projects/2026Spring/project3/tmp/: CMakeLists.txt  Makefile  README.md  benchmark.c  benchmark.h  main.c  matmul.c  matmul.h  matrix.c  matrix.h  project3.md  result.csv
projects/noinline_results/: dotp  dotproduct_opt  results_c(O0).csv  results_c(O0)_mean.csv  results_c(O0)_median.csv  results_c(O0)_run2.csv  results_c(O0)_run4.csv  results_c(O1).csv  results_c(O1)_median.csv  results_c(O1)_run4.csv  results_c(O2)_run1.csv  results_c(O2)_run2.csv  results_c(O2)_run4.csv  results_c(O2)_run5.csv  results_c(O3).csv  results_c(O3)_median.csv  results_c(O3)_run2.csv  results_c(O3)_run3.csv  run_dotproduct_c.sh
projects/ofast_native_results/: results_c(Ofast_native)_mean.csv  results_c(Ofast_native)_median.csv  results_c(Ofast_native)_run1.csv  results_c(Ofast_native)_run2.csv  results_c(Ofast_native)_run3.csv  results_c(Ofast_native)_run4.csv  results_c(Ofast_native)_run5.csv  run_dotproduct_c.sh
projects/ofast_results/: dotproduct_opt  results_c(Ofast)_mean.csv  results_c(Ofast)_median.csv  results_c(Ofast)_run1.csv  results_c(Ofast)_run2.csv  results_c(Ofast)_run3.csv
projects/output_plots/: ns_per_element_mean.csv  ns_per_element_median.csv  ns_per_element_table.md
projects/temp/: dotproduct
projects/windows/: README.md  dotproduct.c  results_c(O0).csv  results_c(O0)_median.csv  results_c(O0)_run1.csv  results_c(O1)_mean.csv  results_c(O1)_median.csv  results_c(O1)_run1.csv  results_c(O1)_run2.csv  results_c(O1)_run3.csv  results_c(O1)_run4.csv  results_c(O1)_run5.csv  results_c(O2).csv  results_c(O2)_run1.csv  results_c(O2)_run2.csv  results_c(O2)_run3.csv  results_c(O2)_run4.csv  results_c(O3)_mean.csv  results_c(O3)_run1.csv  results_c(O3)_run2.csv  results_c(O3)_run3.csv  results_c(O3)_run4.csv  results_c(Ofast).csv  results_c(Ofast)_mean.csv  results_c(Ofast)_median.csv  results_c(Ofast)_run1.csv  results_c(Ofast)_run2.csv  results_c(Ofast)_run3.csv  results_java.csv  (+18 more)
week09/: Lab09.pptx
week10/: Lab10.pptx
week11/: Lab11.pptx  Lecture11.pptx
week12/: Lab12.pptx  Lecture12.pptx
week13/: Lab13.pptx  Lecture13.pptx
(+147 files in other folders)
